# worldeditor

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  UI_DESIGN.md  competitive_analysis.md  docker-compose.yml  interaction_optimization_plan.md  justfile
.chglog/: CHANGELOG.tpl.md  config.yml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  planner.md  tdd-guide.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  deploy-web.yml  release.yml
crates/we-core/: Cargo.toml
crates/we-core/benches/: pick_snap_bench.rs
crates/we-core/examples/: verify_gaussian.rs
crates/we-core/src/: elevation.rs  junction_area.rs  junction_ops.rs  junction_polygon.rs  lane_ops.rs  lib.rs  measurement.rs  osm_export.rs  picking.rs  road_ops.rs  routing.rs  serde_helpers.rs  snapping.rs  spatial_index.rs  spline.rs  topology.rs
crates/we-core/src/geometry/: arc_eval.rs  convex_hull.rs  delaunay.rs  eval.rs  line_eval.rs  mod.rs  simplify.rs  spiral_eval.rs
crates/we-core/src/gis/: ecef.rs  gcj02.rs  gcp.rs  mgrs.rs  mod.rs  proj4.rs  projection.rs  utm.rs  wgs84.rs  wkt.rs
crates/we-core/src/lanelet2/: mod.rs  parser.rs  writer.rs
crates/we-core/src/math/: mod.rs
crates/we-core/src/model/: crg.rs  lane.rs  mod.rs  road.rs  road_link.rs  shape.rs  template.rs  traffic.rs  zone.rs
crates/we-core/src/opendrive/: mod.rs  parser.rs  types.rs  validator.rs  write_geometry.rs  write_lane.rs  write_signal.rs  writer.rs
crates/we-core/src/opendrive/parser/: geometry.rs  header.rs  junction.rs  lane.rs  mod.rs  road.rs  signal.rs  structure.rs  utils.rs
crates/we-core/src/opendrive/tests/: mod.rs  parking.rs  parse.rs  roundtrip.rs  write_geometry.rs  write_lane.rs  write_object.rs  write_road.rs
crates/we-core/src/pointcloud/: gaussian.rs  ground.rs  heightmap.rs  markings.rs  mod.rs  model.rs  pcd.rs  ply.rs  render.rs  vectorize.rs  xyz.rs
crates/we-core/src/road_ops/: mod.rs  optimize.rs  split.rs  swap_centerline.rs  transform.rs  weld.rs
crates/we-core/src/spline/: arc_length.rs  catmull_rom.rs  constraints.rs  conversion.rs  cubic_bezier.rs  mod.rs  soft_selection.rs
crates/we-core/src/topology/: mod.rs  repair.rs  validate.rs
crates/we-core/tests/: baseline_model.rs  large_project_regression.rs  xodr_comparison.rs
crates/we-io/: Cargo.toml  build.rs
crates/we-io/src/: csv_io.rs  dxf_io.rs  geoz_export.rs  lib.rs  mif_io.rs  native.rs  nio_proto.rs  obj_export.rs  shapefile_io.rs  signal_json.rs  sumo.rs  traits.rs  web.rs
crates/we-native/: Cargo.toml
crates/we-native/src/: lib.rs  pointcloud.rs
crates/we-plugin-core/: Cargo.toml
crates/we-plugin-core/src/: context.rs  error.rs  lib.rs  manifest.rs  plugin.rs  registry.rs
crates/we-render/: Cargo.toml
crates/we-render/src/: bridge_tunnel_render.rs  endpoint_render.rs  gizmo.rs  gpu.rs  instance_render.rs  junction_render.rs  lib.rs  mark_render.rs  mesh_cache.rs  object_instancing.rs  object_render.rs  pipeline.rs  point_render.rs  render_config.rs  renderer.rs  road_mesh.rs  signal_render.rs  vertex.rs
crates/we-render/src/camera/: mod.rs
crates/we-render/src/shaders/: basic.wgsl  billboard.wgsl  gizmo.wgsl  grid.wgsl  instanced.wgsl  point.wgsl  road_lane_line.wgsl  road_surface.wgsl  road_textured.wgsl
crates/we-server/: Cargo.toml  Dockerfile
crates/we-server/migrations/: 001_initial.sql
crates/we-server/src/: error.rs  lib.rs  main.rs
crates/we-server/src/api/: files.rs  mod.rs  project.rs
crates/we-server/src/auth/: jwt.rs  mod.rs
crates/we-server/src/storage/: mod.rs  s3.rs
crates/we-server/src/ws/: editor.rs
crates/we-service/: Cargo.toml
crates/we-service/src/: commands.rs  editor.rs  lib.rs
crates/we-service/src/commands/: batch.rs  elevation.rs  junction.rs  lane.rs  mod.rs  road.rs  road_ops.rs  shape.rs  signal.rs  spline.rs  tests.rs  topology.rs
crates/we-service/src/commands/lane/: crud.rs  mod.rs  profile.rs  properties.rs  section_ops.rs
crates/we-service/src/commands/road/: crud.rs  infrastructure.rs  mod.rs  properties.rs  transform.rs
crates/we-service/src/commands/tests/: batch.rs  elevation.rs  junction.rs  lane.rs  misc.rs  mod.rs  object.rs  road.rs  shape.rs  signal.rs  spline.rs
crates/we-wasm/: Cargo.toml
crates/we-wasm/src/: elevation.rs  gis.rs  gis_ext.rs  io.rs  junction_ops.rs  lib.rs  measure.rs  opendrive.rs  picking.rs  pointcloud.rs  render.rs  spline.rs  topology.rs  validation.rs
crates/we-wasm/src/picking/: cached.rs  mod.rs
crates/we-wasm/src/render/: bridge_mesh.rs  colors.rs  helpers.rs  junction_mesh.rs  line_gen.rs  marking_mesh.rs  mod.rs  object_gen.rs  road_gen.rs  road_mesh.rs  signal_arrows.rs  signal_gen.rs  signal_mesh.rs
crates/we-wasm/src/render/signal_mesh/: mod.rs  tests.rs
docs/: 3dgs-rendering-plan.md  code-audit-2026-05.md  performance-bottlenecks.md  sdk-integration.md  todos-edit.md  user-manual.md  xodr-comparison-guide.md
frontend/: .prettierignore  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.rnk-next.config.ts  vitest.config.ts
frontend/e2e/: app-shell.spec.ts  context-menu.spec.ts  data-loading.spec.ts  edit-operations.spec.ts  elevation-editing.spec.ts  fixtures.ts  geometry-draw.spec.ts  geoz-import-render.spec.ts  measurement.spec.ts  open-parse-render.spec.ts  project-lifecycle.spec.ts  render-effects.spec.ts  road-selection.spec.ts  snapping.spec.ts  solid-render.spec.ts  template-panel.spec.ts  theme-visual.spec.ts  undo-redo.spec.ts  viewport-interaction.spec.ts  viewport.spec.ts  visual-regression.spec.ts
frontend/src/: App.test.tsx  App.tsx  buildInfo.ts  main.tsx  test-setup.ts  vite-env.d.ts  wasm.d.ts
scripts/: verify_gaussian_e2e.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  gaussian.rs  lib.rs  main.rs  pointcloud.rs
tools/: diag_crosswalk.py
(+745 files in other folders)
