[workspace]
resolver = "2"
members = [
    "crates/we-core",
    "crates/we-plugin-core",
    "crates/we-render",
    "crates/we-io",
    "crates/we-service",
    "crates/we-native",
    "crates/we-wasm",
    "crates/we-server",
    "src-tauri",
]

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/lin51kevin/worldeditor"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
nalgebra = "0.33"
quick-xml = { version = "0.37", features = ["serialize"] }
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }

# Internal crate references
we-core = { path = "crates/we-core" }
we-plugin-core = { path = "crates/we-plugin-core" }
we-render = { path = "crates/we-render" }
we-io = { path = "crates/we-io" }
we-service = { path = "crates/we-service" }
we-native = { path = "crates/we-native" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
