[package]
name = "worldeditor"
version = "0.3.3"
edition = "2024"
description = "WorldEditor Desktop — Tauri application"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

# Internal crates
we-core = { path = "../crates/we-core" }
we-io = { path = "../crates/we-io" }
we-service = { path = "../crates/we-service" }
we-native = { path = "../crates/we-native", features = ["pointcloud"] }
we-plugin-core = { path = "../crates/we-plugin-core" }
