[package]
name = "we-core"
description = "WorldEditor core domain logic — WASM compatible"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]
proptest = "1"

[lib]
crate-type = ["cdylib", "rlib"]
