[package]
name = "we-core"
description = "WorldEditor core domain logic — WASM compatible"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", default-features = false }

[lib]
crate-type = ["rlib"]

[[bench]]
name = "pick_snap_bench"
harness = false

