[package]
name = "we-io"
description = "WorldEditor I/O abstraction layer — platform-agnostic file system traits"
version.workspace = true
edition.workspace = true

[features]
default = []
# SUMO traffic simulator I/O. Pulls in quick-xml for net.xml parsing.
sumo = ["dep:quick-xml"]

[dependencies]
we-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
quick-xml = { workspace = true, optional = true }
# GeoZ export: protobuf runtime + in-memory ZIP writer (STORED, no compression
# backend → wasm32 compatible).
prost = "0.14"
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }
# Pure-Rust DEFLATE backend (miniz_oxide) for the zip writer — wasm32 safe.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[build-dependencies]
# Pure-Rust protobuf compiler (no external protoc) + prost codegen for the
# GeoZ (rt.hdmap) schema copied into crates/we-io/proto/.
protox = "0.9"
prost-build = "0.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["fs", "io-util"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Storage", "Window"] }
wasm-bindgen = "0.2"

[dev-dependencies]
tempfile = "3"

[lib]
crate-type = ["rlib"]
