[package]
name = "we-native"
description = "WorldEditor native-only features — GDAL, large point clouds, FBX FFI"
version.workspace = true
edition.workspace = true

[features]
default = []
# Point cloud loading (LAS/LAZ via the `las` crate). Enable on desktop builds.
pointcloud = ["dep:las"]

[dependencies]
we-core = { workspace = true }
we-io = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }

# Native-only dependencies (will not compile to WASM)
# gdal = "0.17"        # uncomment when ready
las = { version = "0.9", features = ["laz"], optional = true }

[dev-dependencies]
