[package]
name = "we-plugin-core"
description = "WorldEditor plugin system core — runtime dynamic plugin loading/unloading"
version.workspace = true
edition.workspace = true

[dependencies]
we-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
parking_lot = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
tempfile = "3"

[lib]
crate-type = ["cdylib", "rlib"]
