[package]
name = "we-render"
description = "WorldEditor rendering engine — wgpu, WASM compatible via WebGPU"
version.workspace = true
edition.workspace = true

[dependencies]
we-core = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
nalgebra = { workspace = true }
log = { workspace = true }
glam = "0.29"

[features]
default = []
gpu-tests = []  # Enable GPU-dependent tests (requires display/compute device)

[dev-dependencies]
pollster = "0.3"
env_logger = "0.11"

[lib]
crate-type = ["rlib"]
