[package]
name = "we-server"
description = "WorldEditor web server with REST API + WebSocket"
version.workspace = true
edition.workspace = true

[dependencies]
we-core = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
jsonwebtoken = "9"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"