[package]
name = "we-wasm"
description = "WorldEditor WASM entry point — exports we-core + we-render to JavaScript"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
we-core = { workspace = true }
we-io = { workspace = true }
we-service = { workspace = true }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
log = { workspace = true }
console_log = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
