[package]
name = "we-wasm"
description = "WorldEditor WASM entry point — exports we-core + we-render to JavaScript"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Full desktop-editor modules (gis, gis_ext, measure, validation, topology,
# spline, junction ops, elevation, extra IO formats: csv/obj/dxf/geoz-export/…).
# Off by default so the vendored rnk-next embed's wasm + wasm-bindgen glue stay
# minimal (host uses only opendrive/render/pointcloud). Enable for the desktop
# editor: `wasm-pack build ... -- --features extra-modules`.
extra-modules = []

[dependencies]
we-core = { workspace = true }
we-io = { workspace = true }
we-service = { workspace = true }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
log = { workspace = true }
console_log = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
